force-app/main/default/objects/Asset/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Massey Ferguson</fullName>
            </value>
            <value>
                <fullName>Fendt</fullName>
            </value>
            <value>
                <fullName>Valtra</fullName>
            </value>
            <value>
                <fullName>Challenger</fullName>
            </value>
            <value>
                <fullName>Gleaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>