force-app/main/default/objects/Asset/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <formula>TEXT(Product2.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Machine Type</label>
    <type>Text</type>
</CustomField>