force-app/main/default/objects/Asset/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Name</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>