force-app/main/default/objects/Asset/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Kilometers</fullName>
            </value>
            <value>
                <fullName>Acres</fullName>
            </value>
            <value>
                <fullName>Hectares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>