force-app/main/default/objects/Asset/listViews/AGCO.listView-meta.xml
<ListView>
    <fullName>AGCO</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Model_Name__c</columns>
    <columns>Engine_Serial_Number__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Usage__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>AGCO</label>
</ListView>